# moa-desktop

./: .gitignore  AGENTS.md  DESIGN.md  PLAN.md  PROJECT-RULES.md  README.md  analysis-claude.md  index.html  package-lock.json  package.json  synthesis.md
TICKETS/: T0-spike.md  T1-scaffold.md  T10-ticket-decomposer.md  T11-parallel-runner.md  T12-merge-integrator.md  T13-policy-lifecycle-epic.md  T14-conversational-mode.md  T15-pi-runtime-epic.md  T15INTEGRATE-pi-runtime-integration-verification.md  T15a-pi-compatibility-spike.md  T15b-pi-rpc-runtime-adapter.md  T15c-pi-sdk-sidecar-host.md  T15d-pi-package-trust-installer.md  T15e-pi-extension-ui-bridge.md  T15f-pi-model-session-tree.md  T15g-moa-native-pi-extensions.md  T16-harness-marketplace-equipment-profiles.md  T2-process-runner.md  T20-apphandle-integration-gate.md  T21-role-specialized-firstpass-prompts.md  T22-adaptive-adversarial-depth.md  (+14 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: claude.rs  codex.rs  mod.rs  pi_rpc.rs
src-tauri/src/cancel/: mod.rs  tree_kill.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/decomposer/: mod.rs
src-tauri/src/git/: canonical.rs  mod.rs  patch.rs  worktree.rs
src-tauri/src/integrator/: mod.rs
src-tauri/src/journal/: mod.rs  reader.rs  reconcile.rs  schema.rs  writer.rs
src-tauri/src/lifecycle/: export.rs  import.rs  mod.rs
src-tauri/src/lock/: instance.rs  manager.rs  mod.rs
src-tauri/src/mock/: mod.rs  runner.rs
src-tauri/src/orchestrator/: adversarial.rs  dryrun.rs  flow.rs  mod.rs  state.rs  supervisor.rs  verify.rs
src-tauri/src/parallel/: mod.rs
src-tauri/src/pi/: rpc.rs  types.rs
src-tauri/src/policy/: mod.rs  pack.rs  review.rs  runtime_profile.rs  sync.rs
src-tauri/src/process/: errors.rs  kill.rs  mod.rs  runner.rs  traits.rs
src-tauri/src/safety/: command_guard.rs  hash.rs  mod.rs  scanner.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/synthesis/: mod.rs
src-tauri/src/telemetry/: cost.rs  counter.rs  mod.rs  version.rs
src-tauri/src/test_support/: mod.rs
src-tauri/src/util/: mod.rs  which.rs
src-tauri/tests/: adapter_claude_test.rs  adapter_codex_test.rs  apphandle_smoke_test.rs  cancel_test.rs  git_test.rs  journal_test.rs  lock_test.rs  mock_runner_test.rs  orchestrator_apphandle_harness_test.rs  orchestrator_fixf_test.rs  pi_rpc_adapter_test.rs  process_runner_test.rs  runner_defects_test.rs  safety_test.rs  session_ordering_test.rs  telemetry_test.rs
(+78 files in other folders)
