[package]
name = "moa-desktop"
version = "0.1.0"
description = "MoA Desktop — Claude + Codex sibling-worker orchestrator"
authors = ["mizan"]
edition = "2021"

[lib]
name = "moa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
