[package]
name = "moa-desktop"
version = "0.1.0"
description = "MoA Desktop — Claude + Codex sibling-worker orchestrator"
authors = ["mizan"]
edition = "2021"
# CVE-2024-24576 (BatBadIn): Rust ≥ 1.77.2 quotes argv correctly when
# spawning `.cmd` / `.bat` shims. We resolve npm-installed `*.cmd` shims
# for Claude/Codex CLIs, so this floor is non-negotiable on Windows.
rust-version = "1.77.2"

[lib]
name = "moa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"
dunce = "1"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
